--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.5.1",
     "bulma": "^0.9.4",
     "bulma-calendar": "^6.1.19",
+    "bulma-carousel": "^4.0.24",
     "core-js": "^3.8.3",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.7.0",
